# NongTian

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_orange.xml  bg_orange_normal.xml  bg_orange_pressed.xml  bg_orange_selector.xml  ic_attion.xml  ic_attion_select.xml  ic_cal.xml  ic_down_circle.xml  ic_icon_pic.xml  ic_location.xml  ic_marker_point_green.xml  ic_nav.xml  ic_quality_select.xml  ic_report.xml  ic_report_black.xml  ic_report_orange.xml  ic_report_red.xml  ic_right_circle.xml  ic_to_do_list.xml  ic_to_do_list_select.xml  loading.xml
app/src/main/res/layout/: activity_add_project_schedule.xml  activity_daily_report_details.xml  activity_daily_schedule_details.xml  activity_location_gather.xml  activity_login.xml  activity_notify.xml  activity_notify_detail.xml  activity_notify_publish.xml  activity_project_info.xml  activity_region_project_details.xml  activity_region_project_list.xml  activity_report_count.xml  activity_report_details.xml  activity_trace_record.xml  activity_update_phone.xml  activity_user_info.xml  adapter_speak_content_left.xml  adapter_speak_content_right.xml  common_empty.xml  dialog_calendar.xml  dialog_comment_pic_input.xml  dialog_year_month.xml  fragment_attention.xml  fragment_check.xml  fragment_jianli.xml  fragment_my.xml  fragment_notify.xml  fragment_project_into_list.xml  fragment_report_day_count.xml  fragment_report_month_count.xml  fragment_to_do_list.xml  fragment_unqualified_report.xml  header_village_project.xml  item_notice.xml  item_notify_receive.xml  item_project.xml  item_project_day_schedule.xml  item_project_report.xml  item_project_with_schedule.xml  item_region_project.xml  (+3 more)
app/src/main/res/values/: arrays.xml  colors.xml  styles.xml
compress/: CMakeLists.txt  build.gradle
compress/src/main/java/com/wj/compress/utils/: CompressBitmapUtils.java
compress/src/main/jni/: effective-bitmap.c
compress/src/main/jni/jpeg/: cdjpeg.h  jinclude.h  jmorecfg.h  jpeglib.h
core/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+137 files in other folders)
